[package]
name = "rust-axum-course-me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7.2", features = ["macros"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tower-cookies ="0.10.0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
